# phantom

./: .gitignore  CMakeLists.txt  Phantom.jucer  PhaseDistortionSynth.jucer  README.md  build.sh
.github/: issue_template.md  pull_request_template.md
.github/workflows/: cmake.dev.yml  cmake.yml
Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist
Builds/MacOSX/Phantom.xcodeproj/: project.pbxproj
Builds/MacOSX/Phase Distortion Synth.xcodeproj/: project.pbxproj
Builds/MacOSX/PhaseDistortionSynth.xcodeproj/: project.pbxproj
Builds/MacOSX/phase-distortion-synth.xcodeproj/: project.pbxproj
Builds/VisualStudio2019/: Phantom.sln  Phantom_SharedCode.vcxproj  Phantom_SharedCode.vcxproj.filters  Phantom_VST3.vcxproj  Phase Distortion Synth.sln  Phase Distortion Synth_SharedCode.vcxproj  Phase Distortion Synth_SharedCode.vcxproj.filters  Phase Distortion Synth_StandalonePlugin.vcxproj  Phase Distortion Synth_VST3.vcxproj  PhaseDistortionSynth.sln  PhaseDistortionSynth_SharedCode.vcxproj  PhaseDistortionSynth_SharedCode.vcxproj.filters  PhaseDistortionSynth_StandalonePlugin.vcxproj  PhaseDistortionSynth_VST3.vcxproj  phase-distortion-synth.sln  phase-distortion-synth_SharedCode.vcxproj  phase-distortion-synth_SharedCode.vcxproj.filters  phase-distortion-synth_StandalonePlugin.vcxproj  phase-distortion-synth_VST3.vcxproj  resources.rc
JuceLibraryCode/: AppConfig.h  JuceHeader.h
Phantom/: CMakeLists.txt
Phantom/Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist
Phantom/Builds/VisualStudio2019/: NewProject.sln  NewProject_SharedCode.vcxproj  NewProject_SharedCode.vcxproj.filters  NewProject_StandalonePlugin.vcxproj  NewProject_StandalonePlugin.vcxproj.filters  NewProject_VST3.vcxproj  resources.rc
Phantom/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Phantom/Source/: PhantomEditor.cpp  PhantomEditor.h  PhantomProcessor.cpp  PhantomProcessor.h
Phantom/src/: PhantomEditor.cpp  PhantomEditor.h  PhantomOscillator.cpp  PhantomOscillator.h  PhantomProcessor.cpp  PhantomProcessor.h  PhantomSynth.cpp  PhantomSynth.h
Source/: PhantomEditor.cpp  PhantomEditor.h  PhantomOscilloscope.h  PhantomPhasetable.h  PhantomProcessor.cpp  PhantomProcessor.h  PhantomSound.h  PhantomSynth.cpp  PhantomSynth.h  PhantomVoice.h  PhantomWavetable.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthSound.h  SynthVoice.h
VST3_SDK/doc/: README.md
design/: background.afdesign  plugin-background.afdesign
docs/: DESIGN.md  INSTALL.md  MANUAL.md  README.md  THESIS.md
info/: INSTALLATION.md
phantom/: phantom.jucer
phantom/JuceLibraryCode/: AppConfig.h  JuceHeader.h
phantom/builds/mac-osx/: Info-AU.plist  Info-VST3.plist
phantom/src/: editor.cpp  editor.h  processor.cpp  processor.h
phantom/vst3-sdk/: .gitignore  CMakeCache.txt
proj/: phantom.als
proj/Ableton Project Info/: Project8_1.cfg
proj/Backup/: phantom [2021-04-05 114050].als  phantom [2021-04-13 190629].als  phantom [2021-04-13 190935].als  phantom [2021-04-13 191639].als  phantom [2021-04-13 191727].als  phantom [2021-04-13 195718].als  phantom [2021-04-14 090850].als  phantom [2021-04-14 105623].als  phantom [2021-04-14 111627].als  phantom [2021-04-14 113628].als  phantom [2021-04-14 115201].als
project/: phantom.als
prototyping/bela-io/: phase-dist.cpp
prototyping/python/: .gitignore  README.md  phantom.py  phase_dist.py  requirements.txt  setup.py  test.py
resources/: bass.xml
resources/info/: INSTALLATION.md  MANUAL.md
resources/presets/: algo.xml  algorhythm.xml  analog.xml  buzz-boy.xml  feather.xml  noise-bass.xml  noise-tap.xml  overlord.xml  pitcher.xml  richochet.xml  rumbler.xml  siren.xml  the-stack.xml
scripts/: README.md  build.bash  build.sh  precompile.sh  release.sh
src/: PhantomAmplifier.cpp  PhantomAmplifier.h  PhantomAnalyzer.cpp  PhantomAnalyzer.h  PhantomData.h  PhantomEditor.cpp  PhantomEditor.h  PhantomEnvelopeGenerator.cpp  PhantomEnvelopeGenerator.h  PhantomFilter.cpp  PhantomFilter.h  PhantomLFO.cpp  PhantomLFO.h  PhantomMixer.cpp  PhantomMixer.h  PhantomOscillator.cpp  PhantomOscillator.h  PhantomOscilloscope.cpp  PhantomOscilloscope.h  PhantomPhasor.cpp  PhantomPhasor.h  PhantomProcessor.cpp  PhantomProcessor.h  PhantomSound.cpp  PhantomSound.h  PhantomSynth.cpp  PhantomSynth.h  PhantomUtils.h  PhantomVoice.cpp  PhantomVoice.h  PhantomWaveshaper.cpp  PhantomWaveshaper.h
src/components/: PhantomAmplifier.cpp  PhantomAmplifier.h  PhantomAnalyzer.cpp  PhantomAnalyzer.h  PhantomEnvelope.cpp  PhantomEnvelope.h  PhantomFilter.cpp  PhantomFilter.h  PhantomLFO.cpp  PhantomLFO.h  PhantomMixer.cpp  PhantomMixer.h  PhantomOscillator.cpp  PhantomOscillator.h  PhantomOscilloscope.cpp  PhantomOscilloscope.h  PhantomPhasor.cpp  PhantomPhasor.h  PhantomPreset.cpp  PhantomPreset.h
src/editor/: PhantomEditor.cpp  PhantomEditor.h  PhantomLookAndFeel.cpp  PhantomLookAndFeel.h
src/effects/: PhantomAmplifier.cpp  PhantomAmplifier.h  PhantomFilter.cpp  PhantomFilter.h  PhantomMixer.cpp  PhantomMixer.h  PhantomPhasor.cpp  PhantomPhasor.h  PhantomWaveshaper.h
src/generators/: PhantomEnvelope.cpp  PhantomEnvelope.h  PhantomEnvelopeGenerator.cpp  PhantomEnvelopeGenerator.h  PhantomLFO.cpp  PhantomLFO.h  PhantomOscillator.cpp  PhantomOscillator.h
src/interfaces/: IComponent.h
src/processor/: PhantomPresetManager.cpp  PhantomPresetManager.h  PhantomProcessor.cpp  PhantomProcessor.h  PhantomSound.cpp  PhantomSound.h  PhantomSynth.cpp  PhantomSynth.h  PhantomVoice.cpp  PhantomVoice.h
src/utils/: PhantomData.h  PhantomUtils.h
thesis/: phantom-thesis.docx
(+27 files in other folders)
